--- a/.env
+++ b/.env
@@ -7,9 +7,13 @@ DB_PASSWORD=Q1w2e3r4
 DB_NAME=golang
 DB_PORT=5432 #Default postgres port
 
+# Used by pgadmin service 
+PGADMIN_DEFAULT_EMAIL=live@admin.com
+PGADMIN_DEFAULT_PASSWORD=password
+
 # Postgres Test
 TestApiSecret=98hbun98h
-TestDbHost=127.0.0.1
+#TestDbHost=127.0.0.1
 TestDbDriver=postgres
 TestDbUser=postgres
 TestDbPassword=Q1w2e3r4
